--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,11 @@
-alice-blue==1.0.0
-APScheduler==3.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==21.2.0
-beautifulsoup4==4.9.1
-bleach==3.3.0
-bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.4
-cycler==0.10.0
-defusedxml==0.7.1
-discordwebhook==1.0.0
-entrypoints==0.3
 Flask==1.1.2
-httplib2==0.18.1
-idna==2.7
-ipython-genutils==0.2.0
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
-joblib==1.0.0
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-kiwisolver==1.2.0
-linenotipy==1.0.2
-lxml==4.6.2
 MarkupSafe==1.1.1
-matplotlib==3.3.2
-mibian==0.1.3
-mistune==0.8.4
-more-itertools==8.8.0
-MouseInfo==0.1.3
-multitasking==0.0.9
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-numpy==1.19.5
-oanda-bot==0.1.1
-oandapy==0.0.9
-oandapyV20==0.6.3
-oauth2client==4.1.3
-packaging==20.9
-pandas==1.1.5
-pandocfilters==1.4.3
-Pillow==7.2.0
-pluggy==0.13.1
-protlib==1.4
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.50
-PyGetWindow==0.0.8
-Pygments==2.9.0
-PyMsgBox==1.0.8
-pyparsing==2.4.7
-pyperclip==1.8.0
-PyRect==0.1.4
-pyrsistent==0.17.3
-PyScreeze==0.1.26
-pysimplemodel==2.3.3
-python-dateutil==2.8.1
-python-status==1.0.1
-PyTweening==1.0.3
-pytz==2020.1
-pywin32==300
-PyYAML==3.13
-pyzmq==22.0.3
-requests==2.20.0
-rsa==4.6
-schedule==0.6.0
-scikit-learn==0.23.1
-scipy==1.5.4
-six==1.15.0
-sklearn==0.0
-slack-webhook==1.0.3
-soupsieve==2.0.1
-ta==0.7.0
-tabulate==0.8.2
-testpath==0.5.0
-threadpoolctl==2.1.0
-tornado==6.1
-traitlets==5.0.5
-tzlocal==2.1
-urllib3==1.24.3
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.57.0
 Werkzeug==1.0.1
-yfinance==0.1.55
+numpy==1.19.5
+scipy==1.5.4
+scikit-learn==0.23.1
+matplotlib==3.3.2
+pandas==1.1.5
