--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ Werkzeug==1.0.1
 numpy==1.19.5
 scipy==1.5.4
 scikit-learn==0.23.1
-matplotlib==3.3.2
 pandas==1.1.5
 sklearn==0.0
 joblib==1.0.0
+pickle
 
 
 
