--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask==1.1.2
+Flask==1.1.4
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
 numpy==1.19.5
 scipy==1.5.4
-scikit-learn==0.23.1
+scikit-learn==0.22.2.post1
 pandas==1.1.5
 sklearn==0.0
-joblib==1.0.0
 
 
 
